--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
       </div>
 
-      <div class="sh-page__title ng-binding">La certificazione dell'italiano a livello B1</div>
-      <div class="sh-page__description"><span class="sh-page__description-text ng-binding">https://www.centrostuditaliani.org EMAN SHAHID nato il 05/08/2005 a LAHORE (PAKISTANA) C.F SHHMNE05M45Z236F N.Reg 1258/2024 ESAME B1 SUPERATO</span>
+      <div class="sh-page__title ng-binding">La certificazione dell'italiano a livello A2</div>
+      <div class="sh-page__description"><span class="sh-page__description-text ng-binding">https://www.centrostuditaliani.org EMAN SHAHID nato il 05/08/2005 a LAHORE (PAKISTANA) C.F SHHMNE05M45Z236F N.Reg 1258/2024 ESAME A2 SUPERATO</span>
       </div>
 
-      <img src="img.jpg" data-action="zoom" data-original="image.jpg" alt="Document" />
+      <img src="img1.jpg" data-action="zoom" data-original="image1.jpg" alt="Document" />
 
       <!-- <div>
         <a href="http://www.miur.gov.it" target="_blank" class="link">www.miur.gov.it</a>
